--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,34 @@
 name: CI
 
-on: [push, pull_request]
+on:
+  push:
+    paths-ignore:
+      - "**/*.md"
+      - "**/*.png"
+      - "**/*.jpg"
+      - "**/*.jpeg"
+      - "**/*.gif"
+      - "LICENSE"
+  pull_request:
+    paths-ignore:
+      - "**/*.md"
+      - "**/*.png"
+      - "**/*.jpg"
+      - "**/*.jpeg"
+      - "**/*.gif"
+      - "LICENSE"
+
+concurrency:
+  group: ci-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   test:
     runs-on: ubuntu-latest
+    timeout-minutes: 15
+    env:
+      PIP_DISABLE_PIP_VERSION_CHECK: "1"
+      PYTHONUNBUFFERED: "1"
 
     steps:
       - uses: actions/checkout@v4
@@ -13,22 +37,42 @@ jobs:
         with:
           python-version: "3.11"
           cache: "pip"
+          cache-dependency-path: |
+            requirements-dev.txt
+            requirements.txt
 
       - name: Install dev deps
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements-dev.txt
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
       - name: Sync tests tree
         run: python scripts/sync_tests.py
 
-      - name: Lint & Format
+      # --- Lint / Format：快速阻斷（建議保留） ---
+      - name: Ruff (lint)
+        run: ruff check .
+
+      - name: Black (format check)
+        run: black --check .
+        # 若想減少工具重疊，可改用 `ruff format --check .` 取代 Black（擇一）
+
+      # --- Type check：軟性（不阻斷） ---
+      - name: Mypy (soft check)
+        run: mypy HackerRank LeetCode || true
+        # 若想嚴格一點，把 `|| true` 拿掉即可
+
+      # --- SQL lint：非阻斷（有裝 sqlfluff 才執行成功） ---
+      - name: SQLFluff lint (tsql, non-blocking)
+        continue-on-error: true
         run: |
-          ruff check .
-          black --check .
+          pip install sqlfluff
+          sqlfluff --version
+          # 只做 lint，不 auto-fix，避免改動你的解題檔案
+          sqlfluff lint --dialect tsql .
+        # 若未使用 MSSQL，請改 dialect（postgres/mysql/ansi…）或先移除此步驟
 
-      - name: Static type check
-        run: mypy HackerRank LeetCode
-
+      # --- Tests：正常阻斷，但保持精簡輸出 ---
       - name: Run tests
-        run: pytest
+        run: pytest -q
